--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=16114"><span>Back to the Codrops Article</span></a></span>
 			</div>
 			<header>
-				<h1>Note - GCOEA <span>Access syllabus, now with a greater speed</span></h1>	
+				<h1>GCOEA - Note<span>Access syllabus, now with a greater speed</span></h1>	
 				<!--<nav class="codrops-demos">
 					<a href="index.html">Demo 1</a>
 					<a class="current-demo" href="index2.html">Demo 2</a>
