--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<!-- End of Nav Structure -->
 			</div>
 			<section>
-				<p>Soko leek tomatillo quandong winter purslane caulie jícama daikon dandelion bush tomato.</p>
-				<p>Parsnip tomatillo swiss chard garbanzo gourd potato silver beet..</p>
+				<p>An effort to make your work more effient with ease and speed!</p>
 			</section>
 		</div><!-- /container -->
 		<script src="js/polyfills.js"></script>
