--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				</nav>-->
 			</header>
 			<div class="component">
-				<h2>Celery swiss chard melon</h2>
+				<h2>melon</h2>
 				<!-- Start Nav Structure -->
 				<button class="cn-button" id="cn-button">Branch</button>
 				<div class="cn-wrapper" id="cn-wrapper">
