--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/CreativeLinkEffects/"><span>Previous Demo</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=16114"><span>Back to the Codrops Article</span></a></span>
+				<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/CreativeLinkEffects/"><span>About Us</span></a>
+				<span class="right"><a class="codrops-icon codrops-icon-drop" href="https://gcoea.ac.in"><span>Official Website of GCOEA</span></a></span>
 			</div>
 			<header>
 				<h1>GCOEA - Note<span>Access syllabus, now with a greater speed</span></h1>	
