--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@ ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www')
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
 </script>
-
-
 	</head>
 	<body>
 		<div class="container">
@@ -62,9 +60,9 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<p>Let’s face it, when thinking about what to study, besides for interest and career opportunities, where to study is also a deciding factor. This may limit the choice of subjects or courses to take. Studying online at your own convenience allows you to no longer worry about class location when choosing what to learn next. By taking an online course, you can really focus on the subject you are interested in and choose from the variety of online courses and programs</p>
 			</section>
 		</div>
-		<!--  
+	 
 		<script src="js/polyfills.js"></script>
 		<script src="js/demo2.js"></script>   
-		<script src="http://tympanus.net/codrops/adpacks/demoad.js"></script>-->
+			<!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script>-->
 	</body>
 </html>
