--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<button class="cn-button" id="cn-button">Branch</button>
 				<div class="cn-wrapper" id="cn-wrapper">
 					<ul>
-						<li><a href="#dd.HTML"><span>C.S.E</span></a></li>
+						<li><a href="dd.HTML"><span>C.S.E</span></a></li>
 						<li><a href="#"><span>MECH.</span></a></li>
 						<li><a href="#"><span>CIVIL</span></a></li>
 						<li><a href="#"><span>I.T</span></a></li>
