--- a/it.html
+++ b/it.html
@@ -28,7 +28,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        First Semester
+                        1st Semester
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -64,7 +64,7 @@
                      <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Second Semester
+                        2nd Semester
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -100,7 +100,7 @@
                      <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                    Third Semester
+                    3rd Semester
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -136,7 +136,7 @@
                      <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Fourth Semester
+                        4th Semester
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
@@ -162,89 +162,14 @@
                                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                                 <div class="dropdown-divider"></div>
-                                                <li></li><a class="dropdown-item" href="#">Something else here</a></li>                        
-                                            </ul>
-                                        </li>
-
-
-                                </ul>
-                            </li>
+                                                <li></li><a class="dropdown-item" href="#">Something else here</a>
+                                        </li>                        
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
-<li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Fifth Semester
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <div class="dropdown-divider"></div>
-                        <li></li><a class="dropdown-item" href="#">Something else here</a></li>
-                        <li class="nav-item dropdown">
-                                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <div class="dropdown-divider"></div>
-                                    <li></li><a class="dropdown-item" href="#">Something else here</a></li>              
-                                    <li class="nav-item dropdown">
-                                            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false">
-                                                Dropdown
-                                            </a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                <div class="dropdown-divider"></div>
-                                                <li></li><a class="dropdown-item" href="#">Something else here</a></li>                        
-                                            </ul>
-                                        </li>          
-                                </ul>
-                            </li>
-                    </ul>
-                </li>
-            </ul>
-            <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Sixth Semester
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <div class="dropdown-divider"></div>
-                        <li></li><a class="dropdown-item" href="#">Something else here</a></li>
-                        <li class="nav-item dropdown">
-                                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <div class="dropdown-divider"></div>
-                                    <li></li><a class="dropdown-item" href="#">Something else here</a></li>              
-                                    <li class="nav-item dropdown">
-                                            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false">
-                                                Dropdown
-                                            </a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                <div class="dropdown-divider"></div>
-                                                <li></li><a class="dropdown-item" href="#">Something else here</a></li>                        
-                                            </ul>
-                                        </li>          
-                                </ul>
-                            </li>
-                    </ul>
-                </li>
-            </ul>   
             </ul>
             
             <form class="form-inline my-2 my-lg-0">
