--- a/it.html
+++ b/it.html
@@ -34,8 +34,19 @@
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <div class="dropdown-divider"></div>
-                        <li></li><a class="dropdown-item" href="#">Something else here</a></li>
-                                      
+                        <li></li><a class="dropdown-item" href="#">Something else here</a>
+                        <li></li><a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                        <li class="nav-item dropdown">
+                                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <div class="dropdown-divider"></div>
+                                    <li></li><a class="dropdown-item" href="#">Something else here</a></li>              
                                     <li class="nav-item dropdown">
                                             <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown"
                                                 aria-haspopup="true" aria-expanded="false">
@@ -61,9 +72,7 @@
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <div class="dropdown-divider"></div>
-                        <li></li><a class="dropdown-item" href="#">Something else here</a>
-                        <li></li><a class="dropdown-item" href="#">Something else here</a>
-                    </li>
+                        <li></li><a class="dropdown-item" href="#">Something else here</a></li>
                         <li class="nav-item dropdown">
                                 <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
