--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 			<div class="component">
 				<h2>GCOEA</h2>
 				<!-- Start Nav Structure -->
-				<button class="cn-button" id="cn-button">Branch</button>
+				<button class="cn-button" id="cn-button">Menu</button>
 				<div class="cn-wrapper" id="cn-wrapper">
 					<ul>
 						<li><a href="#"><span>C.S.E</span></a></li>
