--- a/it.html
+++ b/it.html
@@ -190,7 +190,7 @@
                         <li><a class="dropdown-item" href="#">Computer  Organization  </a></li>
                         <li><a class="dropdown-item" href="#">Operating System Design 
                          </a></li>
-                        <li><a class="dropdown-item" href="#">Computer Network
+                        <li><a class="dropdown-item" href="cn.html">Computer Network
                          </a></li>
                         <li><a class="dropdown-item" href="#">E-Commerce 
                          </a></li>
