--- a/cn.html
+++ b/cn.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>COMPUTER NETWORK 🖧</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -25,7 +25,7 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>COMPUTER NETWORK</h3>
+                <h3>COMPUTER NETWORK 🖧</h3>
             </div>
 
             <ul class="list-unstyled components">
@@ -87,11 +87,12 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Syllabus</a>
                 </li>
+                
             </ul>
 
             <ul class="list-unstyled CTAs">
