--- a/cn.html
+++ b/cn.html
@@ -90,7 +90,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Syllabus</a>
+                    <a href="cn_syllabus.pdf">Syllabus</a>
                 </li>
                 
             </ul>
