--- a/cn.html
+++ b/cn.html
@@ -25,7 +25,7 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>COMPUTER NETWORK 🖧</h3>
+                <h3>COMPUTER NETWORK </h3>
             </div>
 
             <ul class="list-unstyled components">
