--- a/cn.html
+++ b/cn.html
@@ -126,10 +126,10 @@
                                 <a class="nav-link" href="#">Theory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Papers</a>
+                                <a class="nav-link" href=cn_paper.html>Papers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Practical's</a>
+                                <a class="nav-link" href="#">Quiz-Time</a>
                             </li>
                         </ul>
                     </div>
