--- a/cn_paper.html
+++ b/cn_paper.html
@@ -17,17 +17,32 @@
  
 </head>
 <body>
-<div class="container">
- 
-  <div class="btn-group btn-group-justified">
-    <a href="cn.html" class="btn btn-primary">Theory</a>
-    <a href="#" class="btn btn-primary">Quiz-Time</a>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">GCOEA - Note </a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">  
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-book"></span>  Back To Theory</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-education"></span>  Quiz-Time</a></li>
+      </ul>
+    </div>
   </div>
-</div>
+</nav>
+
+
+
 
 <div class="container gallery-container">
 
-    <h1>*** All Computer Networking Paper's ***</h1>    
+    <h1>All Computer Networking Paper's</h1>    
     <div class="tz-gallery">
 
         <div class="row">
