--- a/cn_paper.html
+++ b/cn_paper.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta name="description" content="Multi level hover dropdown Navbar for bootstrap 4">
     <meta name="keywords" content="Multi level hover dropdown Navbar for bootstrap 4">
-    <title>CN_paper's</title>
+    <title>CN-PAPER's</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
