--- a/cn.html
+++ b/cn.html
@@ -129,7 +129,7 @@
                                 <a class="nav-link" href=cn_paper.html>Papers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Quiz-Time</a>
+                                <a class="nav-link" href="Quiz/index.html">Quiz-Time</a>
                             </li>
                         </ul>
                     </div>
