--- a/cn_paper.html
+++ b/cn_paper.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="cn.html"><span class="glyphicon glyphicon-book"></span>  Back To Theory</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-education"></span>  Quiz-Time</a></li>
+        <li><a href="Quiz/index.html"><span class="glyphicon glyphicon-education"></span>  Quiz-Time</a></li>
       </ul>
     </div>
   </div>
