--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 						<li><a href="#"><span>C.S.E</span></a></li>
 						<li><a href="#"><span>MECH.</span></a></li>
 						<li><a href="#"><span>CIVIL</span></a></li>
-						<li><a href="./it.html"><span>I.T</span></a></li>
+						<li><a href="It/index.html"><span>I.T</span></a></li>
 						<li><a href="#"><span>INSTRU.</span></a></li>
 						<li><a href="#"><span>EXTC</span></a></li>
 						<li><a href="#"><span>ELECT</span></a></li>
