--- a/It/index.html
+++ b/It/index.html
@@ -56,7 +56,7 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>Rapid</span></a></h1>
+        <h1 class="text-light"><a href="#intro" class="scrollto"><span>GCOEA-Note</span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -158,7 +158,7 @@
       </nav><!-- .main-nav -->
       
     </div>
-  </header><!-- #header -->jdttsdxhg
+  </header><!-- #header -->
 
  <!--==========================
     Intro Section
