--- a/It/index.html
+++ b/It/index.html
@@ -174,7 +174,7 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="" alt="" class="img-fluid">
+          <img src="../code.jpg" alt="" class="img-fluid">
         </div>
       </div>
 
