--- a/It/index.html
+++ b/It/index.html
@@ -169,7 +169,7 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Rapid Solution<br>for Your <span>Online Learning!</span></h2>
           <div>
-            <a href="#faq" class="btn-get-started scrollto">Get Started</a>
+            <a href="#faq" class="btn-get-started scrollto">Any Questions?</a>
           </div>
         </div>
   
