--- a/cn.html
+++ b/cn.html
@@ -126,7 +126,7 @@
                                 <a class="nav-link" href="#">Theory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=cn_paper.html>Papers</a>
+                                <a class="nav-link" href=Papers/cn_paper.html>Papers</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="Quiz/index.html">Quiz-Time</a>
