--- a/It/index.html
+++ b/It/index.html
@@ -63,7 +63,7 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
-         
+
          <li class="drop-down"><a href="">I-SEMESTER</a>
             <ul>
               <li><a href="#">Physics</a></li> 
@@ -174,7 +174,7 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="../code.jpg" alt="" class="img-fluid">
+          <img src="../images/code.jpg" alt="" class="img-fluid">
         </div>
       </div>
 
