--- a/Papers/cn_paper.html
+++ b/Papers/cn_paper.html
@@ -17,6 +17,13 @@
 </head>
 <body>
 
+<div class="pill-nav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
 <div class="container gallery-container">
 
     <h1>Bootstrap 3 Gallery</h1>
