--- a/cn.html
+++ b/cn.html
@@ -100,7 +100,7 @@
                     <a href="cn.pdf" class="download">Download Ref.Book</a>
                 </li>
                 <li>
-                    <a href="it.html" class="article">Back to selection</a>
+                    <a href="It/index.html" class="article">Back to selection</a>
                 </li>
             </ul>
         </nav>
