--- a/Papers/cn_paper.html
+++ b/Papers/cn_paper.html
@@ -18,10 +18,9 @@
 <body>
 
 <div class="pill-nav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="../cn.html">Back to Theory</a>
+  <a href="">Practicals</a>
+  <a href="../Quiz/index.html">Quiz-Time</a>
 </div>
 
 <div class="container gallery-container">
