--- a/Papers/cn_paper.html
+++ b/Papers/cn_paper.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Freebie: 4 Bootstrap Gallery Templates</title>
+    <title>Computer Networking papers</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
@@ -25,9 +25,9 @@
 
 <div class="container gallery-container">
 
-    <h1>Bootstrap 3 Gallery</h1>
+    <h1>G.C.O.E.A - Papers</h1>
 
-    <p class="page-description text-center">Clean Layout With Minimal Styles</p>
+    <p class="page-description text-center">computer networking papers section</p>
     
     <div class="tz-gallery">
 
