--- a/It/index.html
+++ b/It/index.html
@@ -66,91 +66,91 @@
 
          <li class="drop-down"><a href="">I-SEMESTER</a>
             <ul>
-              <li><a href="#">Physics</a></li> 
-              <li><a href="#">Calculus and Linear Algebra</a></li>
-              <li><a href="#">Basic Electrical Engineering</a></li>
-              <li><a href="#">Engineering Mechanics</a></li>
-              <li><a href="#">English</a></li>
-              <li><a href="#">Physics Lab</a></li>
-              <li><a href="#">English Lab</a></li>
-              <li><a href="#">Basic Electrical Lab</a></li>
-              <li><a href="#">Engineering Mechanics Lab</a></li>
-              <li><a href="#">Workshop Practice I</a></li>
+              <li><a href="../coming_soon.html">Physics</a></li> 
+              <li><a href="../coming_soon.html">Calculus and Linear Algebra</a></li>
+              <li><a href="../coming_soon.html">Basic Electrical Engineering</a></li>
+              <li><a href="../coming_soon.html">Engineering Mechanics</a></li>
+              <li><a href="../coming_soon.html">English</a></li>
+              <li><a href="../coming_soon.html">Physics Lab</a></li>
+              <li><a href="../coming_soon.html">English Lab</a></li>
+              <li><a href="../coming_soon.html">Basic Electrical Lab</a></li>
+              <li><a href="../coming_soon.html">Engineering Mechanics Lab</a></li>
+              <li><a href="../coming_soon.html">Workshop Practice I</a></li>
             </ul>
           </li>
 
           <li class="drop-down"><a href="">II-SEMESTER</a>
             <ul>
-              <li><a href="#">Chemistry</a></li>
-              <li><a href="#">calculus & differential equations</a></li>
-              <li><a href="#">Programming for Problem solving</a></li>
-              <li><a href="#">Engineering Graphics</a></li>
-              <li><a href="#">Basic Mechanical Engineering</a></li>
-              <li><a href="#">Chemistry Lab</a></li>
-              <li><a href="#">Programming for Problem solving Lab</a></li>
-              <li><a href="#">System Programming Lab</a></li>
-              <li><a href="#">Engineering Graphics Lab</a></li>
-              <li><a href="#">Workshop Practice II</a></li> 
+              <li><a href="../coming_soon.html">Chemistry</a></li>
+              <li><a href="../coming_soon.html">calculus & differential equations</a></li>
+              <li><a href="../coming_soon.html">Programming for Problem solving</a></li>
+              <li><a href="../coming_soon.html">Engineering Graphics</a></li>
+              <li><a href="../coming_soon.html">Basic Mechanical Engineering</a></li>
+              <li><a href="../coming_soon.html">Chemistry Lab</a></li>
+              <li><a href="../coming_soon.html">Programming for Problem solving Lab</a></li>
+              <li><a href="../coming_soon.html">System Programming Lab</a></li>
+              <li><a href="../coming_soon.html">Engineering Graphics Lab</a></li>
+              <li><a href="../coming_soon.html">Workshop Practice II</a></li> 
             </ul>
           </li>
 
           <li class="drop-down"><a href="">III-SEMESTER</a>
             <ul>
-              <li><a href="#">Engineering Mathematics-III</a></li> 
-              <li><a href="#">Electronic Devices and Circuits</a></li>
-              <li><a href="#">Programming Methodology</a></li>
-              <li><a href="#">Communication Engineering</a></li>
-              <li><a href="#">Discrete Mathematics and Graph Theory</a></li>
-              <li><a href="#">General Proficiency II</a></li>
-              <li><a href="#">Electronic Devices and Circuits Lab</a></li>
-              <li><a href="#">Programming Methodology Lab</a></li>
-              <li><a href="#">Communication Engineering Lab</a></li>
-              <li><a href="#">System Administration-I Lab</a></li>
+              <li><a href="../coming_soon.html">Engineering Mathematics-III</a></li> 
+              <li><a href="../coming_soon.html">Electronic Devices and Circuits</a></li>
+              <li><a href="../coming_soon.html">Programming Methodology</a></li>
+              <li><a href="../coming_soon.html">Communication Engineering</a></li>
+              <li><a href="../coming_soon.html">Discrete Mathematics and Graph Theory</a></li>
+              <li><a href="../coming_soon.html">General Proficiency II</a></li>
+              <li><a href="../coming_soon.html">Electronic Devices and Circuits Lab</a></li>
+              <li><a href="../coming_soon.html">Programming Methodology Lab</a></li>
+              <li><a href="../coming_soon.html">Communication Engineering Lab</a></li>
+              <li><a href="../coming_soon.html">System Administration-I Lab</a></li>
             </ul>
           </li>
 
           <li class="drop-down"><a href="">IV-SEMESTER</a>
             <ul>
-              <li><a href="#">Numerical Method and Computer Programming</a></li> 
-              <li><a href="#">Data Structure</a></li>
-              <li><a href="#">Object Oriented Technology</a></li>
-              <li><a href="#">Digital Integrated Circuits</a></li>
-              <li><a href="#">Data Communication</a></li>
-              <li><a href="#">Data Structure Lab</a></li>
-              <li><a href="#">Data Communication Lab</a></li>
-              <li><a href="#">Object Oriented Technology Lab</a></li>
-              <li><a href="#">Digital Integrated Circuits Lab</a></li>
-              <li><a href="#">System Administration-II Lab</a></li>
+              <li><a href="../coming_soon.html">Numerical Method and Computer Programming</a></li> 
+              <li><a href="../coming_soon.html">Data Structure</a></li>
+              <li><a href="../coming_soon.html">Object Oriented Technology</a></li>
+              <li><a href="../coming_soon.html">Digital Integrated Circuits</a></li>
+              <li><a href="../coming_soon.html">Data Communication</a></li>
+              <li><a href="../coming_soon.html">Data Structure Lab</a></li>
+              <li><a href="../coming_soon.html">Data Communication Lab</a></li>
+              <li><a href="../coming_soon.html">Object Oriented Technology Lab</a></li>
+              <li><a href="../coming_soon.html">Digital Integrated Circuits Lab</a></li>
+              <li><a href="../coming_soon.html">System Administration-II Lab</a></li>
             </ul>
           </li>
 
           <li class="drop-down"><a href="">V-SEMESTER</a>
             <ul>
-              <li><a href="#">System Analysis and Design</a></li> 
-              <li><a href="#">Database Management System</a></li>
-              <li><a href="#">System Programming</a></li>
-              <li><a href="#">Theory of Computation</a></li>
-              <li><a href="#">Principles of Management</a></li>
-              <li><a href="#">System Analysis and Design Lab</a></li>
-              <li><a href="#">Database Management System Lab</a></li>
-              <li><a href="#">System Programming Lab</a></li>
-              <li><a href="#">Hardware Lab</a></li>
-              <li><a href="#">System Administration-III Lab</a></li>
+              <li><a href="../coming_soon.html">System Analysis and Design</a></li> 
+              <li><a href="../coming_soon.html">Database Management System</a></li>
+              <li><a href="../coming_soon.html">System Programming</a></li>
+              <li><a href="../coming_soon.html">Theory of Computation</a></li>
+              <li><a href="../coming_soon.html">Principles of Management</a></li>
+              <li><a href="../coming_soon.html">System Analysis and Design Lab</a></li>
+              <li><a href="../coming_soon.html">Database Management System Lab</a></li>
+              <li><a href="../coming_soon.html">System Programming Lab</a></li>
+              <li><a href="../coming_soon.html">Hardware Lab</a></li>
+              <li><a href="../coming_soon.html">System Administration-III Lab</a></li>
             </ul>
           </li>
 
           <li class="drop-down"><a href="">V-SEMESTER</a>
             <ul>
-              <li><a href="#">Design and Analysis of Algorithms</a></li> 
-              <li><a href="#">Computer  Organization</a></li>
-              <li><a href="#">Operating System Design</a></li>
+              <li><a href="../coming_soon.html">Design and Analysis of Algorithms</a></li> 
+              <li><a href="../coming_soon.html">Computer  Organization</a></li>
+              <li><a href="../coming_soon.html">Operating System Design</a></li>
               <li><a href="../cn.html">Computer Network</a></li>
-              <li><a href="#">E-Commerce</a></li>
-              <li><a href="#">Design & Analysis of Algorithms Lab</a></li>
-              <li><a href="#">Web-Technology Lab</a></li>
-              <li><a href="#">Operating System Design Lab</a></li>
-              <li><a href="#">Computer Network Lab</a></li>
-              <li><a href="#">Minor Project</a></li>
+              <li><a href="../coming_soon.html">E-Commerce</a></li>
+              <li><a href="../coming_soon.html">Design & Analysis of Algorithms Lab</a></li>
+              <li><a href="../coming_soon.html">Web-Technology Lab</a></li>
+              <li><a href="../coming_soon.html">Operating System Design Lab</a></li>
+              <li><a href="../coming_soon.html">Computer Network Lab</a></li>
+              <li><a href="../coming_soon.html">Minor Project</a></li>
             </ul>
           </li>
 
