--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<button class="cn-button" id="cn-button">Menu</button>
 				<div class="cn-wrapper" id="cn-wrapper">
 					<ul>
-						<li><a href="#"><span>C.S.E</span></a></li>
-						<li><a href="#"><span>MECH.</span></a></li>
-						<li><a href="#"><span>CIVIL</span></a></li>
+						<li><a href="coming_soon_main.html"><span>C.S.E</span></a></li>
+						<li><a href="coming_soon_main.html"><span>MECH.</span></a></li>
+						<li><a href="coming_soon_main.html"><span>CIVIL</span></a></li>
 						<li><a href="It/index.html"><span>I.T</span></a></li>
-						<li><a href="#"><span>INSTRU.</span></a></li>
-						<li><a href="#"><span>EXTC</span></a></li>
-						<li><a href="#"><span>ELECT</span></a></li>
+						<li><a href="coming_soon_main.html"><span>INSTRU.</span></a></li>
+						<li><a href="coming_soon_main.html"><span>EXTC</span></a></li>
+						<li><a href="coming_soon_main.html"><span>ELECT</span></a></li>
 					 </ul>
 				</div>
 				<!-- End of Nav Structure -->
