--- a/cn.html
+++ b/cn.html
@@ -134,7 +134,7 @@
                     <a href="https://drive.google.com/open?id=1K3xHz-RRmeRv2TD7m_BXQEOvu2u0Jmr-" class="download">Download Ref.Book</a>
                 </li>
                 <li>
-                    <a href="it.html" class="article">Back to selection</a>
+                    <a href="It/index.html" class="article">Back to selection</a>
                 </li>
             </ul>
         </nav>
