--- a/cn.html
+++ b/cn.html
@@ -124,14 +124,14 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/open?id=1LJUrqw_5f2S7rpGIbrKRviHVCy0t2uqL">Syllabus</a>
+                    <a href="images/cn_syllabus.png" download>Syllabus</a>
                 </li>
                 
             </ul>
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="https://drive.google.com/open?id=1K3xHz-RRmeRv2TD7m_BXQEOvu2u0Jmr-" class="download">Download Ref.Book</a>
+                    <a href="cn.html" class="download">Back to Home-Page</a>
                 </li>
                 <li>
                     <a href="It/index.html" class="article">Back to selection</a>
