--- a/cn.html
+++ b/cn.html
@@ -170,14 +170,13 @@
                 </div>
             </nav>
             
-            <h2 align="center">COMPUTER NETWORK</h2><br>
 <!--            <p><pre><h4><font="Arial">
 Teaching Scheme:03L+00T                     Total:03                   Credits:03
 Evaluation Scheme:15 CT1 + 15 CT2 +10 TA +60 ESE                  Total Marks:100
 Duration of ESE :2 hrs 30 min</font></h4></pre></p>             
 
 <div class="line"></div>-->
-                <h2>What is a Computer Network?</h2>
+                <h2 align="center">What is a Computer Network?</h2>
                 <ul class="points">
 <li><strong>Computer Network</strong> is a group of computers connected with each other through wires, optical fibres or optical links so that various devices can interact with each other through a network.</li>
 <li>The aim of the computer network is the sharing of resources among various devices.</li>
