--- a/cn_tp/Services, problems and protocol.html
+++ b/cn_tp/Services, problems and protocol.html
@@ -153,16 +153,16 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Theory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=cn_paper.html>Papers</a>
+                                <a class="nav-link" href=Papers/cn_paper.html>Papers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Quiz-Time</a>
+                                <a class="nav-link" href="Quiz/index.html">Quiz-Time</a>
                             </li>
                         </ul>
                     </div>
